<resources>
    <string name="app_name">User</string>
    <string name="welcome">Welcome</string>
    <string name="your_rewards">Your Rewards</string>
    <string name="current_offers">Current Offers</string>
    <string name="get_points">Get Points</string>
    <string name="home_button_icon">home button icon</string>
    <string name="back_arrow_image_btn">back arrow image btn</string>
    <string name="user">Username</string>
    <string name="user_points">points</string>
    <string name="home_button" />
    <string name="points_card_button" />
    <string name="account_button" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_offer">Please Select Offer to Redeem Points</string>
    <string name="quest_destinations">Quest\nDestinations</string>
    <string name="cafe_Info" />
    <string name="cafe_logo" />
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
</resources>